@@ -114,14 +114,6 @@ else
 	echo " * no 'AST_CONTROL_HOLD'"
 fi
 
-if grep -q "struct ast_custom_function " $INCLUDEDIR/pbx.h; then
-	echo "#define CC_AST_CUSTOM_FUNCTION" >>$CONFIGFILE
-	echo " * found 'struct ast_custom_function'"
-else
-	echo "#undef CC_AST_CUSTOM_FUNCTION" >>$CONFIGFILE
-	echo " * no 'struct ast_custom_function'"
-fi
-
 if [ -f "$INCLUDEDIR/devicestate.h" ]; then
 	echo "#undef CC_AST_NO_DEVICESTATE" >>$CONFIGFILE
 	echo " * found 'devicestate.h'"
